# lacrei-consultas

./: .gitignore  README.md
lacrei_saude/: Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
lacrei_saude/api/: admin.py  urls.py
lacrei_saude/api/management/commands/: init_db.py
lacrei_saude/api/models/: __init__.py  consulta.py  paciente.py  profissao.py  profissional_de_saude.py  utils.py
lacrei_saude/api/repositories/: consulta_repo.py  paciente_repo.py  profissional_de_saude_repo.py
lacrei_saude/api/serializers/: consulta_serializer.py  paciente_serializer.py  profissao_serializer.py  profissional_de_saude_serializer.py
lacrei_saude/api/services/: consulta_service.py  paciente_service.py  profissional_de_saude_service.py
lacrei_saude/api/views/: consulta_view.py  paciente_view.py  profissional.py  profissional_de_saude_view.py
lacrei_saude/core/: settings.py  urls.py
lacrei_saude/tests/: test_consulta_pi.py
